--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "mongoose": "^5.12.14",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2"
   }
